src/test/ui/asm/named_asm_labels.stderr
error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:11:15
   |
LL |         asm!("bar: nop");
   |               ^^^
   |
   = note: `#[deny(named_asm_labels)]` on by default
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:14:15
   |
LL |         asm!("abcd:");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:17:15
   |
LL |         asm!("foo: bar1: nop");
   |               ^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:17:20
   |
LL |         asm!("foo: bar1: nop");
   |                    ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:22:15
   |
LL |         asm!("foo1: nop", "nop");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:23:15
   |
LL |         asm!("foo2: foo3: nop", "nop");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:23:21
   |
LL |         asm!("foo2: foo3: nop", "nop");
   |                     ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:26:22
   |
LL |         asm!("nop", "foo4: nop");
   |                      ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:27:15
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:27:28
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |                            ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:32:15
   |
LL |         asm!("foo7: nop; foo8: nop");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:32:26
   |
LL |         asm!("foo7: nop; foo8: nop");
   |                          ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:35:15
   |
LL |         asm!("foo9: nop; nop");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:36:20
   |
LL |         asm!("nop; foo10: nop");
   |                    ^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:39:15
   |
LL |         asm!("bar2: nop\n bar3: nop");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:39:27
   |
LL |         asm!("bar2: nop\n bar3: nop");
   |                           ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:42:15
   |
LL |         asm!("bar4: nop\n nop");
   |               ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:43:21
   |
LL |         asm!("nop\n bar5: nop");
   |                     ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:44:21
   |
LL |         asm!("nop\n bar6: bar7: nop");
   |                     ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:44:27
   |
LL |         asm!("nop\n bar6: bar7: nop");
   |                           ^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:51:13
   |
LL |             blah2: nop
   |             ^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:52:13
   |
LL |             blah3: nop
   |             ^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:60:19
   |
LL |             nop ; blah4: nop
   |                   ^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:74:15
   |
LL |         asm!("blah1: 2bar: nop");
   |               ^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:77:15
   |
LL |         asm!("def: def: nop");
   |               ^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:78:15
   |
LL |         asm!("def: nop\ndef: nop");
   |               ^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:79:15
   |
LL |         asm!("def: nop; def: nop");
   |               ^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:87:15
   |
LL |         asm!("fooo\u{003A} nop");
   |               ^^^^^^^^^^^^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:88:15
   |
LL |         asm!("foooo\x3A nop");
   |               ^^^^^^^^^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:91:15
   |
LL |         asm!("fooooo:\u{000A} nop");
   |               ^^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:92:15
   |
LL |         asm!("foooooo:\x0A nop");
   |               ^^^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:96:14
   |
LL |         asm!("\x41\x42\x43\x3A\x20\x6E\x6F\x70");
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named_asm_labels.rs:107:13
   |
LL |             ab: nop // ab: does foo
   |             ^^
   |
   = help: Only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: See the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: aborting due to 33 previous errors

